Test/InvalidFiles/PgCompletionist/InvalidControl.cs
namespace PgCompletionist;

using System.Windows.Markup;

[ContentProperty("None")]
public class InvalidControl
{
}
